--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: Hier Stellen wir das Projekt vor
 cover: assets/images/header.png
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
-baseurl: "/rbhof/" # the subpath of your site, e.g. /blog/ or / for root
+baseurl: "/" # the subpath of your site, e.g. /blog/ or / for root
 url: "https://lukasschaus.github.io/rbhof/" # the base hostname & protocol for your site
 
 pagination:
