--- a/_config.yml
+++ b/_config.yml
@@ -50,10 +50,10 @@ lsi: False
 username: lukasschaus #github username
 repo: rbhof #github repository
 branch: master #branch
-relative_source: ../rbhof/ #source directory
+relative_source: ../ #source directory
 destination: ../hanuman-pages/ #destination directory
 production_url:  https://samanyougarg.com/
-source_url:  https://github.com/samanyougarg/hanuman #source repository url
+source_url:  https://github.com/lukasschaus/rbhof #source repository url
 
 exclude:
   - README.md
