--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ description: Hier Stellen wir das Projekt vor
 cover: assets/images/header.png
 logo: assets/images/logo.png
 favicon: assets/images/favicon.png
-baseurl: "/" # the subpath of your site, e.g. /blog/ or / for root
-url: "https://lukasschaus.github.io/rbhof/" # the base hostname & protocol for your site
+baseurl: "/rbhof/" # the subpath of your site, e.g. /blog/ or / for root
+url: "https://lukasschaus.github.io/" # the base hostname & protocol for your site
 
 pagination:
 
